# FastAPI-XetiaIntern

./: .flake8  .gitignore  README.md  aerich.ini  course_api_spec.yaml  docker-compose.yml  index.py  permissions.json  pyproject.toml  requirements.txt  serve.sh  template.env
api/v1/: __init__.py
api/v1/intro/: welcome.py
app/: bootstrap.py  configs.py  routers.py
database/: connection.py
database/migration/models/: 0_20221027111026_init.py
database/schema/: user_entity.py
database/validator/: quantity.py
dependency/: entity_role.py  oauthbearer.py  oauthbearer2.py  pagination.py  permissions.py
deploy/: .drone.yml  Dockerfile
deploy/conf/nginx/: nginx.conf
helper/: coin_status.py  coins.py  course.py  errors.py  json_encoder.py  language.py  logger.py  permissions.py  points.py  publisher.py  purchase.py  rpc_client.py
model/: login.py
model/body/: base_entity.py  coin_service.py  point_service.py  user_entity_coin.py  user_point.py
model/body/course/: course_achievment.py  course_body.py  course_content.py  course_note.py  course_quiz.py
model/response/: meta.py  points_entity.py  top_up.py  user_entity_coin.py  user_point.py
model/response/course/: course_chapter.py  course_faq.py  course_note.py  course_part.py  course_sylabus.py
