[tool.poetry]
name = "fastapi-skeleton"
version = "0.1.0"
description = "Fastapi skeleton with simple setup"
authors = ["Kasfil <kasf@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sentry-sdk = "^1.10.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.2"}
aerich = ">=0.7.1"
pika = "^1.3.1"
gunicorn = "^20.1.0"
ujson = "^5.5.0"
httpx = "^0.23.0"
redis = "^4.3.4"
hiredis = "^2.0.0"
email-validator = "^1.3.0"
google = "^3.0.0"
google-api-python-client = "^2.65.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.7.0"
PyDrive = "^1.3.1"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.3"
pytest = "^7.2.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-broken-line = "^0.6.0"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.1"
pep8-naming = "^0.13.2"
black = "^22.10.0"
pynvim = "^0.4.3"

[tool.aerich]
tortoise_orm = "database.connection.TORTOISE_ORM"
location = "database/migration/"
src_folder = "./."

[tool.flake8]
max-line-length = 100
inline-quotes = '"'

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
